enh: switch to single-pass review, parsed by flexmark; no more transcription phase. review is incorporated into Session activity, with "Load History" action